# bt_llm_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
examples/: run_backtrader.py
src/bt_llm_advisory/: __init__.py  bt_advisor.py  bt_advisory.py  pydantic_models.py
src/bt_llm_advisory/advisors/: __init__.py  bt_candle_pattern_advisor.py  bt_feedback_advisor.py  bt_persona_advisor.py  bt_strategy_advisor.py  bt_technical_analysis_advisor.py  bt_trend_advisor.py
src/bt_llm_advisory/helper/: bt_data_generation.py
src/bt_llm_advisory/state_advisors/: __init__.py  bt_advisory_advisor.py
